--- a/.editorconfig
+++ b/.editorconfig
@@ -8,9 +8,12 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{c,rb,blade.php,css,scss}]
+[Makefile]
+ident_style = tab
+ident_size = 4
+
+[*.{c,css}]
 indent_size = 2
 
-[*.{cpp,py,pl}]
+[*]
 indent_size = 4
-
