--- a/.editorconfig
+++ b/.editorconfig
@@ -7,13 +7,11 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 120
 
 [Makefile]
-ident_style = tab
-ident_size = 4
+indent_style = tab
+indent_size = 4
 
 [*.{c,css}]
 indent_size = 2
-
-[*]
-indent_size = 4
